<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:id="@+id/layout">

    <GridLayout
        android:id="@+id/gridField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="15"
        android:rowCount="15"
        android:background="@color/colorField"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/handLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/gridField"/>

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:columnCount="4"
        android:rowCount="4">

        <TextView
            android:id="@+id/viewName1"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/name1"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/viewName2"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/name2"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/score1"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/zero"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/score2"
            android:layout_width="wrap_content"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/zero"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onClick"
            android:text="@string/reset" />

        <Button
            android:id="@+id/change"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:onClick="onClick"
            android:text="@string/change" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onClick"
            android:text="@string/ok" />

        <Button
            android:id="@+id/pass"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:onClick="onClick"
            android:text="@string/pass" />

    </GridLayout>

</RelativeLayout>